<resources>
    <string name="app_name">To-Do</string>
    <string name="working">Loading....</string>

    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="transition_string">animate</string>

    <string name="title_activity_nav_bar">NavBar</string>
    <string name="title_activity_add_menu_item">addMenuItem</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo_task">Todo Task</string>
    <string name="databseKey">Todo</string>
    <string name="completedTask">COMPLETED</string>
    <string name="pendingTask">PENDING</string>
    <string name="todoTaskTypeKey">type</string>
    <string name="hint_task_name">Task Name</string>
    <string name="hint_et_task_description">Task description</string>
    <string name="title_activity_add_task">Add Task</string>
    <string name="taskExtraKey">currentTask</string>
    <string name="databaseKeySubtasks">Subtasks</string>
    <string name="taskDeleted">Task deleted .</string>
    <string name="TaskUnavailable">Task Unavailable</string>
    <string name="signOutMessage">Signing out</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="description_add_button">add button</string>
    <string name="done_button">done button</string>
    <string name="delete_task_button">delete task button</string>
    <string name="logo">logo icon</string>
    <string name="header">header</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="about_me">About Me</string>
    <string name="Error_retrieving">Error retrieving data</string>
    <string name="titleEmpt">Title empty , cannot add task</string>
    <string name="descEmpty">Description empty , Do you want to continue?</string>
    <string name="loggedIn">Logged in</string>
    <string name="loggedOut">Signed out</string>
    <string name="internetUnavailable">Internet unavailable , Cannot sign in</string>
    <string name="onBackPress">Please click BACK again to exit</string>
    <string name="signing_in">Signing in...</string>
    <string name="SignInFailes">Sign in failed</string>
    <string name="settingAccount">Setting up account</string>
    <string name="user_details">User details</string>
    <string name="no_tasks_available">No tasks available</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_extra">widget extra</string>
    <string name="extraPos">extraPos</string>


</resources>
