<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:id="@+id/navHeader"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:contentDescription="@string/header"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:paddingTop="16dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/black_overlay"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="@color/snackBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:text="@string/username"
            android:textColor="@color/black_overlay"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </View>

        <com.todo.todo.utils.CircularImageView
         android:id="@+id/UserPic"
        android:layout_width="80dp"
        android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="end" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:background="@color/snackBar" />

</LinearLayout>
